// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`my bouts > shows a referee or judge the bouts they're assigned to, with their role 1`] = `
{
  "agreed_weight": "number",
  "championship": "null",
  "championshipId": "null",
  "championshipTitleName": "null",
  "championship_id": "null",
  "club_a_name": "null",
  "club_a_note": "null",
  "club_a_responded_at": "null",
  "club_a_responded_by": "null",
  "club_a_responder_name": "null",
  "club_a_responder_role": "null",
  "club_a_response": "string",
  "club_b_name": "null",
  "club_b_note": "null",
  "club_b_responded_at": "null",
  "club_b_responded_by": "null",
  "club_b_responder_name": "null",
  "club_b_responder_role": "null",
  "club_b_response": "string",
  "created_at": "datetime(.000000Z)",
  "date": "date",
  "event_id": "uuid",
  "event_location": "string",
  "event_name": "string",
  "event_status": "string",
  "fighter_a": {
    "alias": "null",
    "club": "null",
    "club_id": "null",
    "created_at": "datetime(.000000Z)",
    "current_weight": "number",
    "date_of_birth": "date",
    "deleted_at": "null",
    "gender": "string",
    "grade": "string",
    "height": "number",
    "id": "uuid",
    "image": "null",
    "medical_status": "string",
    "name": "string",
    "name_khmer": "string",
    "nationality": "string",
    "professional_status": "string",
    "province": "null",
    "record": "null",
    "status": "string",
    "style": "null",
    "suspension_end_date": "null",
    "updated_at": "datetime(.000000Z)",
    "verified_by": "null",
    "verified_date": "null",
  },
  "fighter_a_confirmed": "boolean",
  "fighter_a_grade": "string",
  "fighter_a_id": "uuid",
  "fighter_a_image": "null",
  "fighter_a_name": "string",
  "fighter_a_record": "null",
  "fighter_b": {
    "alias": "null",
    "club": "null",
    "club_id": "null",
    "created_at": "datetime(.000000Z)",
    "current_weight": "number",
    "date_of_birth": "date",
    "deleted_at": "null",
    "gender": "string",
    "grade": "string",
    "height": "number",
    "id": "uuid",
    "image": "null",
    "medical_status": "string",
    "name": "string",
    "name_khmer": "string",
    "nationality": "string",
    "professional_status": "string",
    "province": "null",
    "record": "null",
    "status": "string",
    "style": "null",
    "suspension_end_date": "null",
    "updated_at": "datetime(.000000Z)",
    "verified_by": "null",
    "verified_date": "null",
  },
  "fighter_b_confirmed": "boolean",
  "fighter_b_grade": "string",
  "fighter_b_id": "uuid",
  "fighter_b_image": "null",
  "fighter_b_name": "string",
  "fighter_b_record": "null",
  "glove_brand": "string",
  "glove_confirmed_date": "null",
  "glove_size": "string",
  "id": "uuid",
  "isTitleMatch": "boolean",
  "is_title_match": "boolean",
  "judge_ids": [
    "uuid",
  ],
  "knockdown_limit": "number",
  "my_role": "string",
  "proposal_status": "string",
  "referee": {
    "club_id": "null",
    "created_at": "datetime(.000000Z)",
    "email": "string",
    "full_name": "string",
    "id": "uuid",
    "last_login": "datetime(sql)",
    "role": "string",
    "status": "string",
    "updated_at": "datetime(.000000Z)",
    "username": "string",
  },
  "referee_confirmed": "boolean",
  "referee_id": "uuid",
  "referee_name": "string",
  "result": "null",
  "round_time": "number",
  "rounds": "number",
  "sortOrder": "number",
  "sort_order": "number",
  "status": "string",
  "sub_event": {
    "batch_number": "string",
    "created_at": "datetime(.000000Z)",
    "created_by": "uuid",
    "date": "datetime(.000000Z)",
    "event_id": "uuid",
    "id": "uuid",
    "location": "string",
    "name": "string",
    "phase": "string",
    "status": "string",
    "updated_at": "datetime(.000000Z)",
    "week_number": "number",
  },
  "sub_event_id": "uuid",
  "sub_event_name": "string",
  "updated_at": "datetime(.000000Z)",
  "winner_duration": "null",
  "winner_id": "null",
  "winner_method": "null",
  "winner_round": "null",
}
`;

exports[`officials register > is managed by KKF staff only 1`] = `
{
  "body": {
    "error": "string",
    "success": "boolean",
  },
  "status": 403,
}
`;

exports[`officials register > lets KKF staff add a referee or judge with grade and year started 1`] = `
{
  "body": {
    "data": {
      "boutsOnDate": "null",
      "email": "string",
      "fullName": "string",
      "grade": "string",
      "id": "uuid",
      "role": "string",
      "since": "number",
      "status": "string",
      "upcomingBouts": "number",
      "username": "string",
      "yearsExperience": "number",
    },
    "success": "boolean",
  },
  "status": 201,
}
`;

exports[`officials register > lists officials for staff and organizers, filtered by role 1`] = `
{
  "boutsOnDate": "null",
  "email": "string",
  "fullName": "string",
  "grade": "string",
  "id": "uuid",
  "role": "string",
  "since": "number",
  "status": "string",
  "upcomingBouts": "number",
  "username": "string",
  "yearsExperience": "number",
}
`;

exports[`officials register > only edits referees and judges 1`] = `
{
  "body": {
    "error": "string",
    "success": "boolean",
  },
  "status": 404,
}
`;
